--- a/vercel.json
+++ b/vercel.json
@@ -1,3 +1,3 @@
 {
-    "rewrites": [{ "source": "/api/index", "destination": "/" }]
+    "rewrites": [{ "source": "/api/(.*)", "destination": "/api" }]
   }
